# ChangeLog for app-laptop/tlp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tlp-0.5 (24 Mar 2014)

  24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5.ebuild
  Latest upstream release

*tlp-0.4.1 (02 Jan 2014)

  02 Jan 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
  Latest upstream release, mostly containing compat changes.

*tlp-0.4-r1 (15 Dec 2013)

  15 Dec 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.4-r1.ebuild
  Apply upstream patch that removes the dependency on on_ac_power.
  This allows to drop sys-power/pm-utils from RDEPEND on systems
  using systemd.
  See upstream commit b1cc3941afc80b56f5c33227bcb8f54b01964bed.
  Also check for CONFIG_ACPI_AC, CONFIG_POWER_SUPPLY in the ebuild.

  10 Dec 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.4.ebuild
  - Set TLP_ENABLE=0 in TLP's config file as it used to be prior to 0.4.
  - src_install(): call emake with CONFFILE set

*tlp-0.4 (21 Sep 2013)

  21 Sep 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.4.ebuild
  Version Bump with some notable changes, e.g. improves systemd support by
  no longer depending on UPower being built with --enable-deprecated
  (upower dependency completely dropped). See upstream changelog for details.

  19 Sep 2013; Andre Erdmann <dywi@mailerd.de>
  tlp-0.3.7.1.ebuild,
  tlp-0.3.8.1.ebuild,
  tlp-0.3.9.900_pre20130730.ebuild,
  tlp-0.3.9.ebuild:
  Default to USE+=tpacpi-bat, app-laptop/tpacpi-bat-1 is too old for TLP,
  upstream issue #44 (reported by MK-42).

  04 Aug 2013; Andre Erdmann <dywi@mailerd.de>
  tlp-0.3.7.1.ebuild,
  tlp-0.3.8.1.ebuild,
  tlp-0.3.9.900_pre20130730.ebuild,
  tlp-0.3.9.ebuild:
  sys-power/upower needs to be built with --enable-deprecated

*tlp-0.3.9.900_pre20130730 (30 Jul 2013)

  30 Jul 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.900_pre20130730.ebuild:
  Added TLP devel version, notable changes:
  * deal with udev's network device naming scheme
    (+support more than one eth device)