@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.5-r1 (20 May 2014)
+
+  24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r1.ebuild
+  Changed config file location to /etc/tlp.conf (zhou13; github issue #4)
+  Replaced symlinks in /etc/pm/power.d with a single file in /etc/pm/config.d
+  Masked.
+
 *tlp-0.5 (24 Mar 2014)
 
   24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5.ebuild
